fix: add contrast to btn--primary on hover/focus state

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -26,12 +26,15 @@
     &:focus-within,
     &:active {
       background-color: transparent;
-      border-color: var(--color-text-header)
+      border-color: var(--color-text-header);
+      color: var(--color-primary);
+      filter: brightness(120%);
     }
   }
 
   &--secondary {
     color: var(--color-text-header);
+    border-color: var(--color-text-header);
 
     &:hover,
     &:focus,
